iap-https-lb/frontend-service-neg.yaml

apiVersion: v1
kind: Service
metadata:
  name: copilot-frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "copilot-frontend-config"}'
spec:
  type: NodePort
  selector:
    app: copilot-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8501
